--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "node-spotify-api": "^1.0.7",
     "prepend-file": "^1.3.1",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "twitter": "^1.7.1"
   }
 }
